ubiquity (2.2.4) UNRELEASED; urgency=low

  [ Evan Dandrea ]
  * Properly set the text for the release notes label after the user
    runs the 'update this installer' option.
  * Correctly set up GtkComboBoxEntry widgets (LP: #539204).

  [ Colin Watson ]
  * Port from base-installer:
    - Ensure that Acquire::cdrom::AutoDetect is disabled when running
      apt-cdrom.  We bind-mount /target/cdrom, so apt's new libudev-based
      autodetection isn't needed during installation (LP: #539170).

 -- Evan Dandrea <evand@ubuntu.com>  Wed, 17 Mar 2010 09:49:31 +0000

ubiquity (2.2.3) lucid; urgency=low

  * Automatic update of included source packages: partman-base 138ubuntu4.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 17 Mar 2010 00:27:39 +0000

ubiquity (2.2.2) lucid; urgency=low

  * Quit plymouth if it doesn't have an active VT, rather than trying to
    reuse the VT it doesn't have, which results in X running on VT1.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 16 Mar 2010 16:26:05 +0000

ubiquity (2.2.1) lucid; urgency=low

  * KDE frontend:
    - Honour ubiquity/show_alpha_warning.
  * Noninteractive frontend:
    - Fix up plugin problems in the partman component (LP: #539342).
  * Only fall through to the noninteractive frontend in automatic mode.

 -- Colin Watson <cjwatson@ubuntu.com>  Tue, 16 Mar 2010 14:07:33 +0000

ubiquity (2.2.0) lucid; urgency=low

  [ Evan Dandrea ]
  * Removed the alpha warning.  Welcome to Ubuntu 10.04 Beta 1.
  * Align labels to the top on the language page (LP: #532876).
  * The run method of GTK+ dialogs enters a nested main loop.  However,
    the user can click the quit button (which calls the quit dialog's
    run method) before the page is ready.  Once the page is actually ready,
    another main loop is entered, and thus if the user hits the quit button
    on the quit dialog at this point, nothing will happen.  Work around this
    by managing the state of the quit dialog in the frontend.

  [ Colin Watson ]